crates/analyzer/tests/snapshots/errors__mislabeled_call_args_self.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: argument label mismatch
  ┌─ compile_errors/mislabeled_call_args_self.fe:4:18
  │
4 │         self.bar(doesnt_exist=1, me_neither=2)
  │                  ^^^^^^^^^^^^ expected `val1`

error: argument label mismatch
  ┌─ compile_errors/mislabeled_call_args_self.fe:4:34
  │
4 │         self.bar(doesnt_exist=1, me_neither=2)
  │                                  ^^^^^^^^^^ expected `val2`


